openshiftnew/angular-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml --provider=openshift
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  replicas: 1
  selector:
    io.kompose.service: angular
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: angular
    spec:
      containers:
      - image: ' '
        name: frontend
        ports:
        - containerPort: 4200
        resources: {}
        volumeMounts:
        - mountPath: /frontend
          name: angular-claim0
        - mountPath: /frontend/node_modules
          name: angular-claim1
      restartPolicy: Always
      volumes:
      - name: angular-claim0
        persistentVolumeClaim:
          claimName: angular-claim0
      - name: angular-claim1
        persistentVolumeClaim:
          claimName: angular-claim1
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - frontend
      from:
        kind: ImageStreamTag
        name: angular:LATEST
    type: ImageChange
status: {}
