openshiftnew/app-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: frontend
spec:
  host: velociti2.dev2.conygre.com
  port:
    targetPort: '4200'
  to:
    kind: Service
    name: frontend
